# Excel-Restaurant-Pos

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt  socketio_token.js
.github/workflows/: build-and-deploy.yml  prod-build-and-deploy.yml
docker/: websocket-token-compose-snippet.yml
excel_restaurant_pos/: auth.py  hooks.py  modules.txt  patches.txt  routes.py  socket_client.py  test_auth.py  test_publisher.py  test_redis_monitor.py  test_subscriber.py
excel_restaurant_pos/api/: __init__.py  api_routes.py  bom.py  feedback.py  item.py  item_group.py  menu.py  settings.py
excel_restaurant_pos/config/: customer.py  desktop.py  docs.py
excel_restaurant_pos/doc_event/: __init__.py  item.py  pos_invoice.py  sales_invoice.py  tax_and_charges.py
excel_restaurant_pos/fixtures/: custom_field.json  property_setter.json  role.json
excel_restaurant_pos/overrides/: __init__.py  pdf.py  todo.py  twofactor.py  user.py
excel_restaurant_pos/patches/: create_sales_by_service_procedure.py  create_sales_summary_function.py
excel_restaurant_pos/public/: node_modules
excel_restaurant_pos/realtime/: index.js  start.sh
excel_restaurant_pos/utils/: __init__.py  convert_to_decimal_string.py  convert_to_flt_string.py  is_new.py  iso_to_frappe_datetime.py  jwt_auth.py  scheduled_tasks.py
excel_restaurant_pos/www/: restaurant.html
frappe-types/: index.html  package.json  vite.config.ts
portal/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
portal/src/: App.tsx  (+2 more)
realtime_token/: README.md  index.js  utils.js
(+569 files in other folders)
