[project]
name = "excel_restaurant_pos"
authors = [
    { name = "Sohanur Rahman", email = "sohan.dev@excelbd.com"}
]
description = "Restaurant Order and Billing Management System"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "qrcode~=8.2",
    "exponent-server-sdk~=2.1",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
